Fix blurbs' weird overflow issues

--- a/css/style.less
+++ b/css/style.less
@@ -41,6 +41,7 @@ p {
 	a:hover {
 		text-decoration: none;
 	}
+	overflow: auto;
 }
 .definition > p:first-child::before, p.definition::before {
 	content: "\e043"; /* book */
@@ -58,6 +59,7 @@ p {
 	a:hover {
 		text-decoration: none;
 	}
+	overflow: auto;
 }
 .note > p:first-child::before, p.note::before {
 	content: "\e101"; /* alert */
@@ -75,6 +77,7 @@ p {
 	a:hover {
 		text-decoration: none;
 	}
+	overflow: auto;
 }
 .deeper > p:first-child::before, p.deeper::before {
 	content: "\e233"; /* education */
@@ -92,6 +95,7 @@ p {
 	a:hover {
 		text-decoration: none;
 	}
+	overflow: auto;
 }
 .exercise > p:first-child::before, p.exercise::before {
 	content: "\270f"; /* pencil */
